--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "escapestudios/symfony2-coding-standard": "^3.0",
         "slevomat/coding-standard": "^4.0",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "psr/simple-cache": "^1.0"
     },
     "autoload": {
         "psr-4": {
